--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<description>Demo project for Spring Boot</description>
 	<modules>
 		<module>member</module>
+		<module>common</module>
 	</modules>
 
 
@@ -33,6 +34,24 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.70</version>
+			</dependency>
+
+			<dependency>
+				<groupId>cn.hutool</groupId>
+				<artifactId>hutool-all</artifactId>
+				<version>5.8.10</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.yichun</groupId>
+				<artifactId>common</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
