--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 				<version>8.0.22</version>
 			</dependency>
 
+			<dependency>
+				<groupId>me.paulschwarz</groupId>
+				<artifactId>spring-dotenv</artifactId>
+				<version>4.0.0</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
