--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 				<version>4.0.0</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>1.4.6</version>
+			</dependency>
+
+
 		</dependencies>
 	</dependencyManagement>
 
