--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<module>common</module>
 		<module>gateway</module>
 		<module>generator</module>
-		<module>admin</module>
+		<module>business</module>
 	</modules>
 
 
