--- a/batch/src/main/resources/application.properties
+++ b/batch/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8003
 server.servlet.context-path=/batch
+spring.application.name=batch
 
 # ?????
 spring.datasource.url=jdbc:mysql://rm-cn-x0r3d2j8i000b8fo.rwlb.rds.aliyuncs.com/ticket_batch?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
