--- a/business/src/main/resources/application.properties
+++ b/business/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8002
 server.servlet.context-path=/business
+spring.application.name=business
 
 # ?????
 spring.datasource.url=jdbc:mysql://rm-cn-x0r3d2j8i000b8fo.rwlb.rds.aliyuncs.com/ticket_business?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
