--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8001
 server.servlet.context-path=/member
+spring.application.name=member
 
 # ?????
 spring.datasource.url=jdbc:mysql://${DATABASE_IP}/ticket_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
